# Lenguajes2024

./: LPFVNO.hs  README.md
Ornitorrinco/: Anfibio.cpp  Anfibio.h  CMakeLists.txt  Mamifero.cpp  Mamifero.h  Ornitorrinco.cpp  Ornitorrinco.h  Oviparo.cpp  Oviparo.h  Venenoso.cpp  Venenoso.h  main.cpp
Ovni/: CMakeLists.txt  Ovni.cpp  Ovni.h  main.cpp
Perrito/: CMakeLists.txt  Perrito.cpp  Perrito.h  main.cpp
