cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp
        Ornitorrinco.cpp
        Ornitorrinco.h
        Mamifero.cpp
        Mamifero.h
        Oviparo.cpp
        Oviparo.h
        Anfibio.cpp
        Anfibio.h
        Venenoso.cpp
        Venenoso.h)
